[package]
name = "grack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
anyhow = "1.0.68"
async-stream = "0.3.3"
itertools = "0.10.5"
miniserde = "0.1.28"
next-gen = "0.1.1"
vmap = "0.5.1"
